--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.3.0/milligram.min.css"/>
-  <link rel="stylesheet" type="text/css" href="style.css"/>  
+  <link rel="stylesheet" type="text/css" href="public/style.css"/>  
 </head>
 <body>
     <div class="container">
           <div class="leftc">
             <div class="p-img">
-                <img src="coding.png" alt="Avatar">
+                <img src="public/coding.png" alt="Avatar">
             </div>
             
             <div class="links">
-              <a href="https://www.linkedin.com/in/emrahizci/"><img src="linkedin.png" /></a>
-              <a href="https://github.com/emrhzc"><img src="github.png" /></a>
-              <a href="https://stackoverflow.com/users/1123532/emrhzc"><img src="so.png" /></a>
+              <a href="https://www.linkedin.com/in/emrahizci/"><img src="public/linkedin.png" /></a>
+              <a href="https://github.com/emrhzc"><img src="public/github.png" /></a>
+              <a href="https://stackoverflow.com/users/1123532/emrhzc"><img src="public/so.png" /></a>
             </div>
           </div>
           <div class="middlec">
@@ -315,6 +315,6 @@
             </div>
           </div>
     </div>
-      <script src="script.js"></script>
+      <script src="public/script.js"></script>
 </body>
 </html>
