--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
               <template id="pprojects-template">
                 <div class="project">
                   <strong>%name%</strong>
+                  <a class='p-link' href="%url%" target='_blank'>&#128279;</a>
                   <small>%content%</small>
                 </div>
               </template>
